# jobbergate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Dockerfile-dev  Makefile  README.md  README.rst  ROADMAP.rst  codecov.yml  default.env  docker-compose.yml  index.html  merge_changelogs.py  objects.inv  prestart.sh  pyproject.toml  requirements.txt  ruff.toml  towncrier.toml  tox.ini
fake-sbatch/: Makefile  README.md  README.rst  pyproject.toml
fake-sbatch/fake_sbatch/: config.py  main.py
fake-sbatch/tests/: conftest.py  test_main.py
jobbergate-agent/: .env.example  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  pyproject.toml
jobbergate-agent-snap/: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  tox.ini
jobbergate-agent-snap/snap/: snapcraft.yaml
jobbergate-agent-snap/wrappers/commands/: daemon.restart  daemon.start  daemon.stop
jobbergate-agent/dev/: test_jobbergate_agent.sh
jobbergate-agent/etc/: entrypoint.sh
jobbergate-agent/jobbergate_agent/: main.py  settings.py  tasks.py  telemetry.py  version.py
jobbergate-agent/jobbergate_agent/clients/: cluster_api.py  influx.py  slurmrestd.py
jobbergate-agent/jobbergate_agent/identity/: cluster_api.py  slurmrestd.py
jobbergate-agent/jobbergate_agent/internals/: update.py
jobbergate-agent/jobbergate_agent/jobbergate/: api.py  constants.py  finish.py  pagination.py  report_health.py  schemas.py  submit.py  update.py
jobbergate-agent/jobbergate_agent/user_mapper/: base.py  ldap.py  single_user.py
jobbergate-agent/jobbergate_agent/utils/: compute.py  exception.py  logging.py  plugin.py  process.py  scheduler.py  sentry.py  user_mapper.py
jobbergate-agent/tests/: conftest.py  test_influxdb_client.py  test_main.py  test_settings.py
jobbergate-agent/tests/identity/: test_cluster_api_identity.py  test_slurmrestd_identity.py
jobbergate-agent/tests/internals/: test_update.py
jobbergate-agent/tests/jobbergate/: conftest.py  test_api.py  test_compute.py  test_constants.py  test_finish.py  test_pagination.py  test_report_health.py  test_submit.py  test_update.py
jobbergate-agent/tests/user_mapper/: test_base.py  test_ldap.py  test_user_mapper.py
jobbergate-agent/tests/utils.py/: test_plugin.py  test_scheduler.py  test_user_mapper.py
jobbergate-api/: CHANGELOG.md  CHANGELOG.rst  Dockerfile  Dockerfile-dev  Makefile  README.md  README.rst  hack_build_secrets.sh  mypy.ini  pyproject.toml
jobbergate-api/alembic/: 20220803_160219--d22da0741b7f_refactor_application_file_management-copy.py  alembic.ini  env.py
jobbergate-api/alembic/versions/: 20211216_120231--d3388a22e0e9_initial_migration_for_jobbergate_in_.py  20220105_152804--5f987ab31acf_job_79_added_file_uploaded_column_to_.py  20220319_134018--75325d649ee2_added_status_column.py  20220419_171125--edfdea225579_added_execution_directory_to_job_.py  20220525_171327--023f534b159d_move_jobscripts_to_s3.py  20220624_135711--98126f55efd5_renamed_cluster_id_column_to_client_id.py  20220627_103125--2ab7ccf2f8c8_move_jobscripts_to_s3.py  20220630_154732--bee7c554afd7_add_email_notification.py  20220803_160219--d22da0741b7f_refactor_application_file_management.py  (+27 more)
jobbergate-api/dev_tools/: __init__.py  db.py  dev_server.py  entrypoint.sh  env.py  metrics.py  show_env.py
jobbergate-api/jobbergate_api/: __init__.py  coding.py  config.py  database.py  email_notification.py  file_validation.py  logging.py  main.py  meta_mapper.py  metadata.py  pagination.py  profiler.py  rabbitmq_notification.py  retry_utils.py  s3_manager.py  safe_types.py  security.py  storage.py  telemetry.py  version.py
jobbergate-api/jobbergateapi2/: compat.py  config.py  main.py  pagination.py  s3_manager.py  storage.py
jobbergate-api/tests/: conftest.py  test_config.py  test_email_notification.py  test_meta_mapper.py  test_pagination.py  test_rabbitmq_notification.py  test_retry_utils.py  test_security.py  test_storage.py  test_version.py
jobbergate-cli/: AGENTS.md  ASP-6876.py  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  check_sdk_methods.py  pyproject.toml  verify_tui.py
jobbergate-cli/etc/: entrypoint.sh
jobbergate-cli/jobbergate_cli/: __init__.py  appform.py  application_base.py  applications.py  auth.py  cache.py  cli_helpers.py  client.py  compat.py  config.py  constants.py  context.py  crud_helpers.py  exceptions.py  fake_sbatch.py  jobberappslib.py  jobbergate_api_wrapper.py  jobbergate_common.py  logging.py  main.py  old_main.py  render.py  requests.py  schemas.py  telemetry.py  telemetry_events.py  text_tools.py  time_loop.py
jobbergate-cli/pyinstaller/: README.md  jobbergate.py  jobbergate.spec
jobbergate-cli/scripts/: release.sh
jobbergate-cli/tests/: conftest.py  test_application_base.py  test_auth.py  test_compat.py  test_config.py  test_context.py  test_exceptions.py  test_jobbergate_api_wrapper.py  test_requests.py  test_schemas.py  test_text_tools.py
jobbergate-core/: CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml
jobbergate-core/code-gen/: README.md  pyproject.toml  setup.py
jobbergate-core/jobbergate_core/: __init__.py  auth.py  version.py
jobbergate-core/tests/: __init__.py  test_auth.py  test_version.py
jobbergate-docs/: .gitignore  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE.md  Makefile  README.md  README.rst  pyproject.toml
jobbergate-docs/docs/: mkdocs.yaml
jobbergate-docs/src/: attribution.rst  conf.py  contact.rst  core.rst  implementation_details.rst  index.rst  jobbergate_yaml.rst  overview.rst  tutorial.rst  usage.rst
jobbergate-slurp/: README.md  README.rst  compare_tar_db.py  pyproject.toml
jobbergate-slurp/slurp/: batch.py  config.py  connections.py  db_login.py  exceptions.py  main.py  mirror.py  pull_legacy.py  s3_ops.py
jobbergate-test/: README.md  README.rst  pyproject.toml
jobbergate-test/jobbergate_test/: __main__.py  applications.py  base.py  constants.py  job_scripts.py  job_submission.py  main.py  utils.py
(+665 files in other folders)
