[tool.poetry]
authors = [
    "Lucas de Carvalho <lucas.carvalho@omnivector.solutions>"
]
name = "jobbergateapi2"
description = "jobbergate-api"
license = "MIT"
version = "0.1.0"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_localfolder = "jobbergateapi2,apps,tests"
skip_glob = "migrations/*"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
email_validator = "^1.1.0"
uvicorn = "^0.11.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = "^1.7.2"
python-multipart = "^0.0.5"
psycopg2 = "^2.8.6"
python-dotenv = "^0.16.0"
tox = "^3.23.0"
mangum = "^0.11.0"
databases = {extras = ["sqlite"], version = "^0.4.3"}
boto3 = "^1.17.51"
pytest-freezegun = "^0.4.2"
Jinja2 = "^2.11.3"
asyncpg = "^0.22.0"
fastapi_permissions = "^0.2.7"

[tool.poetry.dev-dependencies]
black = { version = "^19", allow-prereleases = true }
pre-commit = "^2.9.2"
pytest = "^5.2"
pytest-asyncio = "^0.12"
pytest-cov = "^2.8"
python-status = "i^1.0"
requests = "^2.23.0"
nest_asyncio = "^1.3.3"
coverage = "^5.1"

[tool.poetry.scripts]
createsuperuser = "jobbergateapi2.createsuperuser:createsuperuser"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
