[tool.poetry]
name = "fake-sbatch"
version = "0.1.0"
description = "An executable that pretends to be sbatch for testing purposes."
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest-mock = "^3.7.0"
pytest = "^7.0.1"

[tool.poetry.scripts]
fake-sbatch = "fake_sbatch.main:app"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
lines_after_imports = "2"
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
max-complexity = 40

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
