[project]
name = "fake-sbatch"
description = "An executable that pretends to be sbatch for testing purposes."
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
]
dynamic = ["version"]

[project.scripts]
fake-sbatch = "fake_sbatch.main:app"

[dependency-groups]
dev = ["pytest-mock>=3.7.0"]

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "hatchling>=1.28.0", # Build the package
    "hatch-vcs",         # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "fake_sbatch/_version.py"
