[project]
name = "fake-sbatch"
description = "An executable that pretends to be sbatch for testing purposes."
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "typer>=0.26.7",
]
dynamic = ["version"]

[project.scripts]
fake-sbatch = "fake_sbatch.main:app"

[dependency-groups]
dev = ["pytest-mock>=3.15.1"]

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "hatchling>=1.30.1", # Build the package
    "hatch-vcs",         # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "fake_sbatch/_version.py"
