[tool.poetry]
name = "jobbergate-agent-snap"
version = "5.5.0"
description = "Jobbergate Agent Snap"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/jobbergate"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
mypy = "^1.15.0"

[tool.ruff]
line-length = 110
include = ["hooks/bin/configure"]

[tool.mypy]
files = ["hooks/bin/configure"]
pretty = true
follow_imports = "silent"
ignore_missing_imports = false
