[project]
name = "jobbergate-agent"
description = "Jobbergate Agent"
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jobbergate-core",
    "apscheduler==3.10.3",
    "python-dotenv>=1.2.1",
    "sentry-sdk>=2.47.0",
    "auto-name-enum>=3.0.0",
    "pydantic-settings>=2.12.0",
    "msgpack>=1.1.2",
    "influxdb>=5.3.2",
    "numba>=0.63.1",
    "pluggy>=1.6.0",
]
dynamic = ["dependency-coversioning", "version"]

[project.scripts]
jg-run = "jobbergate_agent.main:main"

[project.entry-points."jobbergate_agent.tasks"]
active-jobs = "jobbergate_agent.tasks:active_submissions_task"
pending-jobs = "jobbergate_agent.tasks:pending_submissions_task"
report-status = "jobbergate_agent.tasks:status_report_task"
self-update = "jobbergate_agent.tasks:self_update_task"

[project.entry-points."jobbergate_agent.user_mapper"]
single-user-mapper = "jobbergate_agent.utils.user_mapper:SingleUserMapper"

[project.urls]
Repository = "https://github.com/omnivector-solutions/jobbergate"
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
Changelog = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-agent/CHANGELOG.rst"

[dependency-groups]
dev = []

[tool.uv.sources]
jobbergate-core = { workspace = true }


[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--random-order",
    "--cov=jobbergate_agent",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
]
env = [
    "JOBBERGATE_AGENT_OIDC_DOMAIN = auth.com",
    "JOBBERGATE_AGENT_OIDC_CLIENT_ID = DUMMY-TEST-CLIENT-ID",
    "JOBBERGATE_AGENT_OIDC_CLIENT_SECRET = DUMMY-TEST-CLIENT-SECRET",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "dataclasses",
    "toml",
    "requests",
    "jose.*",
    "apscheduler.*",
    "influxdb",
    "msgpack",
    "numba",
]
ignore_missing_imports = true

[build-system]
requires = [
    "hatchling>=1.28.0",          # Build the package
    "hatch-dependency-coversion", # pin jobbergate-core to the same version as the agent at build time
    "hatch-vcs",                  # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.dependency-coversion]
override-versions-of = ["jobbergate-core"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "jobbergate_agent/_version.py"
