[tool.poetry]
name = "jobbergate-api"
version = "5.6.6"
description = "Jobbergate API"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/jobbergate"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
"Changelog" = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-api/CHANGELOG.rst"

[tool.poetry.dependencies]
python = "^3.11"
aioboto3 = "^11.2"
alembic = "^1.10.0"
armasec = "^2.0.1"
asyncpg = "^0.27.0"
fastapi = "^0.115"
fastapi-pagination = "^0.12.31"
greenlet = "^2.0.1"
httpx = "^0.24.1"
inflection = "^0.5.1"
Jinja2 = "^3.1.2"
loguru = "^0.6.0"
nest-asyncio = "^1.5.7"
pendulum = { extras = ["test"], version = "^3.0.0" }
py-buzz = "^4.0.0"
pydantic = { extras = ["email"], version = "^2.7"}
python-dotenv = "^1.0.0"
python-multipart = ">=0.0.7"
pyyaml = ">=6.0.1"
sendgrid = "^6.9.7"
sentry-sdk = "^1.29.2"
snick = "^1.3.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.19" }
uvicorn = "^0.23.0"
yarl = "^1.7.2"
auto-name-enum = "^2.0.0"
aio-pika = "^8.3.0"
pydantic-settings = "^2.2.1"
msgpack = "^1.1.0"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^1.0.1"
ipython = ">=7.31.1,<9.0.0"
mypy = "^1.8.0"
nest_asyncio = "^1.3.3"
pgcli = "^3.1.0"
psycopg2 = "^2.9.5"
pytest = "^7"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0.0"
pytest-env = "^1.1"
pytest-random-order = "^1.0.4"
python-status = "^1.0"
requests = "^2.32.3"
respx = "^0.20.1"
typer = "^0.12.3"
types-aioboto3 = { extras = ["essential"], version = "^11.2.0" }
types-PyYAML = "6.0.*"
types-toml = "^0.10.8.7"
flaky = "^3.7.0"
ruff = "^0.4.9"

[tool.poetry.scripts]
dev-tools = "dev_tools:app"

[tool.ruff]
line-length = 110
extend-exclude = ["alembic/*"]

[tool.ruff.lint]
extend-ignore = ["D200", "D106", "D402"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--random-order",
    "--cov=jobbergate_api",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
    "--no-flaky-report",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pytest_env]
DEPLOY_ENV = "TEST"                                              # Enforces that test database env vars will be used
ARMASEC_DOMAIN = "armasec.dev"                                   # Must align with the rs256_domain fixture in armasec's pytest extension
ARMASEC_DEBUG = false                                            # Set this to True to debug armasec issues by seeing verbose logging
SENDGRID_FROM_EMAIL = "info@pytesting.com"
SENDGRID_API_KEY = "test-api-key"
AWS_ACCESS_KEY_ID = "compose-s3-key"
AWS_SECRET_ACCESS_KEY = "compose-s3-secret"
RABBITMQ_HOST = { value = "localhost", skip_if_set = true }
RABBITMQ_USERNAME = { value = "local-user", skip_if_set = true }
RABBITMQ_PASSWORD = { value = "local-pswd", skip_if_set = true }

[tool.coverage.run]
omit = [
    "jobbergate_api/main.py",
    "jobbergate_api/safe_types.py",
    "jobbergate_api/logging.py",
]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "boto3",
    "botocore.*",
    "sendgrid.*",
    "sqlalchemy",
    "toml",
    "uvicorn",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
