[project]
name = "jobbergate-api"
description = "Jobbergate API"
authors = [
    {name = "Omnivector Solutions", email = "info@omnivector.solutions"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.17.2",
    "armasec>=3.0.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "fastapi-pagination>=0.15.3",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "pendulum[test]>=3.1.0",
    "py-buzz>=7.3.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20,<0.0.23",
    "pyyaml>=6.0.3",
    "sendgrid>=6.12.5",
    "sentry-sdk>=2.47.0",
    "snick>=2.2.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "yarl>=1.22.0",
    "auto-name-enum>=3.0.0",
    "aio-pika>=9.5.8",
    "pydantic-settings>=2.12.0",
    "msgpack>=1.1.2",
]
dynamic = ["version"]

[project.scripts]
dev-tools = "dev_tools:app"
jg-api-cron = "jobbergate_api.utils.cron:main"

[project.urls]
Repository = "https://github.com/omnivector-solutions/jobbergate"
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
Changelog = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-api/CHANGELOG.rst"

[dependency-groups]
dev = [
    "asgi-lifespan>=1.0.1",
    "nest-asyncio>=1.6.0",
    "pgcli>=4.3.0",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "typer>=0.20.0",
    "types-aioboto3[essential]>=11.3.1",
    "types-pyyaml>=6.0",
    "types-toml>=0.10.8.7",
    "flaky>=3.8.1",
]


[tool.ruff]
line-length = 110
extend-exclude = ["alembic/*"]

[tool.ruff.lint]
extend-ignore = ["D200", "D106", "D402"]

[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=jobbergate_api",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
    "--no-flaky-report",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pytest_env]
DEPLOY_ENV = "TEST"                                              # Enforces that test database env vars will be used
ARMASEC_DOMAIN = "armasec.dev"                                   # Must align with the rs256_domain fixture in armasec's pytest extension
ARMASEC_DEBUG = false                                            # Set this to True to debug armasec issues by seeing verbose logging
SENDGRID_FROM_EMAIL = "info@pytesting.com"
SENDGRID_API_KEY = "test-api-key"
AWS_ACCESS_KEY_ID = "compose-s3-key"
AWS_SECRET_ACCESS_KEY = "compose-s3-secret"
RABBITMQ_HOST = { value = "localhost", skip_if_set = true }
RABBITMQ_USERNAME = { value = "local-user", skip_if_set = true }
RABBITMQ_PASSWORD = { value = "local-pswd", skip_if_set = true }

[tool.coverage.run]
omit = [
    "jobbergate_api/main.py",
    "jobbergate_api/safe_types.py",
    "jobbergate_api/logging.py",
]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "boto3",
    "botocore.*",
    "sendgrid.*",
    "sqlalchemy",
    "toml",
    "uvicorn",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[build-system]
requires = [
    "hatchling>=1.28.0",          # Build the package
    "hatch-vcs",                  # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "jobbergate_api/_version.py"
