[tool.poetry]
name = "jobbergate-cli"
version = "5.6.6"
description = "Jobbergate CLI Client"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/jobbergate"
packages = [{ include = "jobbergate_cli" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
"Changelog" = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-cli/CHANGELOG.rst"

[tool.poetry.dependencies]
python = "^3.10"
jobbergate-core = { path = "../jobbergate-core", develop = true }
click = "^8.1.0"
importlib-metadata = "^4.2"
inquirer = "^3.1.0"
Jinja2 = "^3.1.2"
pyperclip = "^1.8.2"
python-dotenv = "^1.0.0"
PyYAML = "6.*"
rich = "^11.2.0"
sentry-sdk = "^1.29.2"
typer = "^0.16.0"
pydantic = "^2.7"
pydantic-settings = "^2.3.3"

[tool.poetry.scripts]
jobbergate = "jobbergate_cli.main:safe_entrypoint"

[tool.stickywheel]
# This will resolve the relative path to the jobbergate-core package at build time
# and pin its version based on the version in the jobbergate-cli pyproject.toml file.
# Since it is at build time, there is no need to install the pluging on dev machines,
# the deployment workflow will take care of it.
# Reference: https://github.com/python-poetry/poetry/issues/6850#issuecomment-1445477319
strategy = "exact"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10"
plummet = { extras = ["time-machine"], version = "^1.1.0" }
pytest-cov = "^4.0.0"
pytest-env = "^0.6.2"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.6.0"
pytest-random-order = "^1.0.4"
pytest-responsemock = "^1.0.1"
respx = "^0.20.1"
types-PyYAML = "^6.0.4"
ruff = "^0.4.9"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--random-order",
    "--cov=jobbergate_cli",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
]
env = [
    "ARMADA_API_BASE = https://some-pretend-armada-url.com",
    "JOBBERGATE_DEBUG = false",
    "JOBBERGATE_CACHE_DIR = /tmp/jobbergate-cache",
    "OIDC_DOMAIN = dummy_auth_domain.com",
    "OIDC_CLIENT_ID = dummy_client_id",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["urllib3", "pyperclip", "inquirer.*", "jose.*", "pep562"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
