[project]
name = "jobbergate-cli"
description = "Jobbergate CLI Client"
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jobbergate-core",
    "click>=8.3.1",
    "importlib-metadata>=8.7.0",
    "inquirer>=3.4.1",
    "jinja2>=3.1.6",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sentry-sdk>=2.47.0",
    "typer>=0.20.0",
    "pydantic-settings>=2.12.0",
]
dynamic = ["dependency-coversioning", "version"]

[project.scripts]
jobbergate = "jobbergate_cli.main:safe_entrypoint"

[project.urls]
Repository = "https://github.com/omnivector-solutions/jobbergate"
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
Changelog = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-cli/CHANGELOG.rst"

[dependency-groups]
dev = ["plummet[time-machine]>=1.2.1", "types-pyyaml>=6.0.12"]

[tool.uv.sources]
jobbergate-core = { workspace = true }

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=jobbergate_cli",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
]
env = [
    "BASE_API_URL = https://some-pretend-armada-url.com",
    "JOBBERGATE_DEBUG = false",
    "JOBBERGATE_CACHE_DIR = /tmp/jobbergate-cache",
    "OIDC_DOMAIN = dummy_auth_domain.com",
    "OIDC_CLIENT_ID = dummy_client_id",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["urllib3", "pyperclip", "inquirer.*", "jose.*", "pep562"]
ignore_missing_imports = true

[build-system]
requires = [
    "hatchling>=1.28.0",          # Build the package
    "hatch-dependency-coversion", # pin jobbergate-core to the same version as the cli at build time
    "hatch-vcs",                  # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.dependency-coversion]
override-versions-of = ["jobbergate-core"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "jobbergate_cli/_version.py"
