[tool.poetry]
name = "jobbergate-core"
version = "5.6.6"
description = "Jobbergate Core"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/jobbergate"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
"Changelog" = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-core/CHANGELOG.rst"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
loguru = "^0.6.0"
pendulum = { extras = ["test"], version = "^3.0.0" }
py-buzz = "^5.0"
python-jose = "^3.3.0"
pydantic = "^2.7"

[tool.poetry.dev-dependencies]
mypy = "^1.10"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.6.0"
pytest-random-order = "^1.0.4"
requests-mock = "^1.10"
respx = "^0.20.1"
setuptools = "^70.0.0"
toml = "^0.10.2"
ruff = "^0.4.9"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--random-order",
    "--cov=jobbergate_core",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["click", "dataclasses", "toml", "requests", "jose.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
