[project]
name = "jobbergate-core"
description = "Jobbergate Core"
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.28.1,<1",
    "loguru>=0.7.3",
    "pendulum[test]>=3.1.0",
    "py-buzz>=7.3.0",
    "python-jose>=3.5.0",
    "pydantic>=2.12.5",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/omnivector-solutions/jobbergate"
"Bug Tracker" = "https://github.com/omnivector-solutions/jobbergate/issues"
Changelog = "https://github.com/omnivector-solutions/jobbergate/blob/main/jobbergate-core/CHANGELOG.rst"

[dependency-groups]
dev = []

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=jobbergate_core",
    "--cov-report=term",
    "--cov-report=xml:tests/coverage.xml",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["click", "dataclasses", "toml", "requests", "jose.*"]
ignore_missing_imports = true

[build-system]
requires = [
    "hatchling>=1.28.0", # Build the package
    "hatch-vcs",         # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "jobbergate_core/_version.py"
