[tool.poetry]
name = "jobbergate-documentation"
version = "5.6.3"
description = "Jobbergate Official Documentation"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
repository = "https://github.com/omnivector-solutions/jobbergate"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.4.2"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }
pygments = "^2.16.1"
jobbergate-core = { path = "../jobbergate-core", develop = true }
jobbergate-api = { path = "../jobbergate-api", develop = true }
jobbergate-cli = { path = "../jobbergate-cli", develop = true }
jobbergate-agent = { path = "../jobbergate-agent", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
